src/main/java/com/example/librarymanagementsystem/error/InvalidUserInputException.java
package com.example.librarymanagementsystem.error;

public class InvalidUserInputException extends RuntimeException {
    public InvalidUserInputException(String message) {
        super(message);
    }
}
